Initial update to version numbers.

--- a/doc-Installing_on_AWS/cfme/master.adoc
+++ b/doc-Installing_on_AWS/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Installing Red Hat CloudForms on Amazon Elastic Compute Cloud (Amazon EC2)
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -35,6 +35,7 @@ include::common/initial-login.adoc[]
 [[appliance-console-cli]]
 === Appliance Console Command-Line Interface (CLI)
 include::common/appe-appliance-console-cli.adoc[]
+
 
 
 
