--- a/doc-Policies_and_Profiles_Guide/topics/To_create_an_Ansible_Playbook_Run.adoc
+++ b/doc-Policies_and_Profiles_Guide/topics/To_create_an_Ansible_Playbook_Run.adoc
@@ -1,7 +1,7 @@
 [[creating-an-ansible-playbook-run]]
 ==== Creating an Ansible Playbook Run Action
 Use this action to run an Ansible Playbook against your inventory. You must first sync a playbook repository and add an Ansible Playbook service catalog item. 
-ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.6/managing-providers/#automation_management_providers[Automation Management Providers] in _Managing Providers_ for more information.] 
+ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.7-Beta/managing-providers/#automation_management_providers[Automation Management Providers] in _Managing Providers_ for more information.] 
 
 . Navigate to menu:Control[Explorer].
 
@@ -18,6 +18,7 @@ ifdef::cfme[See link:https://access.redhat.com/documentation/en/red-hat-cloudfor
 .. If *Specific Hosts* is selected, provide the IP or DNS names. 
 
 . Click *Add*.
+
 
 
 
