--- a/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
+++ b/doc-QuickStart_OpenStack_Provider_Guide/topics/configuration-quick.adoc
@@ -58,7 +58,7 @@ include::common/configuration-register-appliance.adoc[]
 
 [NOTE]
 ====
-To update your appliances, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.6/html-single/migrating_to_red_hat_cloudforms_4.6/[Updating {product-title}] in _Migrating to {product-title} 4.6_.
+To update your appliances, see https://access.redhat.com/documentation/en-us/red_hat_cloudforms/4.7-Beta/html-single/migrating_to_red_hat_cloudforms_4.7-Beta/[Updating {product-title}] in _Migrating to {product-title} 4.7-Beta_.
 ====
 
 endif::cfme[]
@@ -90,4 +90,5 @@ For more information, see https://access.redhat.com/documentation/en/red-hat-clo
 ==== Enabling SmartState Analysis
 
 include::common/smartstate.adoc[]
+
 
