--- a/doc-General_Configuration/cfme/master.adoc
+++ b/doc-General_Configuration/cfme/master.adoc
@@ -1,6 +1,6 @@
 = General Configuration
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -29,3 +29,4 @@ include::topics/RH_Insights.adoc[]
 
 [[appendix]]
 include::topics/appe-default-roles.adoc[]
+
