--- a/doc-Managing_Authentication/cfme/master.adoc
+++ b/doc-Managing_Authentication/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Managing Authentication for CloudForms
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :experimental:
@@ -38,6 +38,7 @@ include::topics/SAML.adoc[]
 
 :leveloffset: 2
 include::topics/External_auth_troubleshooting.adoc[]
+
 
 
 
