--- a/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
+++ b/doc-Methods_Available_for_Automation/topics/Methods_Available_for_Automation.adoc
@@ -15,7 +15,7 @@ While gems can be imported into automation methods using `require`, it is recomm
 It is the responsibility of the author of such custom automation to own the life cycle of any gem being referenced in those methods. 
 
 ifdef::cfme[]
-The link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.6/release-notes/release-notes[Red Hat CloudForms 4.6 Release Notes], list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
+The link:https://access.redhat.com/documentation/en/red-hat-cloudforms/4.7-Beta/release-notes/release-notes[Red Hat CloudForms 4.7-Beta Release Notes], list Ruby gems that have been added, updated, or removed in the latest version of CloudForms Management Engine.
 
 For lists of Ruby gems included in different CloudForms Management Engine releases, see the following article:
 
@@ -3847,6 +3847,7 @@ See after the table for usage examples.
 include::Category_and_Tags_Methods_Example1.adoc[]
 
 include::Quota2.adoc[]
+
 
 
 
