--- a/doc-Policies_and_Profiles_Guide/cfme/master.adoc
+++ b/doc-Policies_and_Profiles_Guide/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Policies and Profiles Guide
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -43,5 +43,6 @@ include::topics/chap_events.adoc[]
 === OpenSCAP Integration
 include::topics/OpenSCAP_Integration.adoc[]
 ////
+
 
 
