--- a/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
+++ b/doc-Provisioning_Virtual_Machines_and_Hosts/cfme/master.adoc
@@ -1,6 +1,6 @@
 = Provisioning Virtual Machines and Hosts
 :imagesdir: images
-:vernum: 4.6
+:vernum: 4.7-Beta
 :toc: left
 :toclevels: 3
 :numbered!:
@@ -23,5 +23,6 @@ include::topics/Retirement.adoc[]
 [[appendix]]
 include::topics/appe-creating-a-service-for-provisioning-vm.adoc[]
 include::topics/appe-cloudformation-template-service-provisioning.adoc[]
+
 
 
