--- a/doc-Managing_Providers/topics/Cloud_Providers.adoc
+++ b/doc-Managing_Providers/topics/Cloud_Providers.adoc
@@ -67,6 +67,9 @@ include::Enabling_Public_AMIs.adoc[]
 :leveloffset: 3
 include::Enabling_AWS_Config_Notifications.adoc[]
 
+:leveloffset: 3
+include::Enabling_Amazon_Events.adoc[]
+
 
 :leveloffset: 2
 = Google Compute Engine Providers
