fixed build issue with xref

--- a/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
+++ b/doc-Managing_Providers/topics/Enabling_AWS_Config_Notifications.adoc
@@ -1,3 +1,4 @@
+[[amazon-provider-aws-config-notifications]]
 = Enabling AWS Config Notifications
 
 Amazon's AWS Config notifies subscribers of changes in a region through its Simple Notification Service (SNS). {product-title} subscribes to the SNS service for AWS Config deltas and converts the deltas into {product-title} events. 
