Fixed product name in master and index.adoc.

--- a/art-Creating_a_Service_for_VM_Provisioning/cfme/master.adoc
+++ b/art-Creating_a_Service_for_VM_Provisioning/cfme/master.adoc
@@ -1,4 +1,4 @@
-= Creating a Service in {product-title_short} for Virtual Machine Provisioning
+= Creating a Service in CloudForms for Virtual Machine Provisioning
 :imagesdir: images
 :vernum: 4.6
 :toc: left
