--- a/art-Creating_a_Service_for_VM_Provisioning/miq/index.adoc
+++ b/art-Creating_a_Service_for_VM_Provisioning/miq/index.adoc
@@ -1,4 +1,4 @@
-= Creating a Service in {product-title_short} for Virtual Machine Provisioning
+= Creating a Service in ManageIQ for Virtual Machine Provisioning
 ManageIQ Documentation Team <contact@manageiq.org>
 :imagesdir: images
 :vernum: 0
