--- a/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
+++ b/doc-Managing_Providers/topics/Optimizing_Playbooks.adoc
@@ -10,3 +10,5 @@ include::Adding_Ansible_Galaxy_Roles.adoc[]
 include::Ansible_Service_Linking.adoc[]
 
 include::manageiq-automate-role.adoc[]
+
+include::Ansible_Playbook_Store_Sessions.adoc[]
