--- a/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
+++ b/doc-Monitoring_Alerts_and_Reporting/topics/To_create_a_chargeback_report.adoc
@@ -5,7 +5,7 @@
 
 [NOTE]
 ====
-When creating a chargeback report, the *Total Cost* is the complete cost for the chosen workload over the selected time frame. Total costs are calculated by adding the calculated costs for the amount used and the amount allocated for that time frame. When adding cost related columns to display on your report, be sure to select all rate assigned fields to present a comprehensive accounting of total costs.  
+When creating a chargeback report, the *Total Cost* is the complete cost for the chosen workload over the selected time frame. Total costs are calculated by adding the calculated costs for the amount used and the amount allocated for the time frame. When adding cost related columns to display on your report, be sure to select all rate assigned fields to present a comprehensive accounting of total costs.  
 ====
 
 include::common/chargeback-report-creation.adoc[]
