--- a/doc-Managing_Providers/topics/Ansible_Credentials.adoc
+++ b/doc-Managing_Providers/topics/Ansible_Credentials.adoc
@@ -25,7 +25,7 @@ The following procedure guides you through adding credentials for Red Hat Virtua
 . Click  image:1847.png[Configuration] (*Configuration*), then  image:1862.png[Add a New Credential] (*Add a New Credential*).
 . Provide a *Name* for the credential.
 . Select *Red Hat Virtualization* from the *Credential Type* list. 
-. Enter a *Username* in the format `username@domain'.
+. Enter a *Username* in the format `username@domain`.
 . Enter the *Password*.
 . Enter the *Host* IP address or URL address. 
 +
