Applied review edits.

--- a/art-Creating_a_Service_for_VM_Provisioning/topics/Creating_a_Catalog_Item.adoc
+++ b/art-Creating_a_Service_for_VM_Provisioning/topics/Creating_a_Catalog_Item.adoc
@@ -1,7 +1,7 @@
 [[create-catalog-item]]
 == Creating a Catalog Item
 
-The last step in creating a service is to create a catalog item to represent that service in a catalog.
+Create a service catalog item to represent that service in a catalog.
 
 . Navigate to menu:Services[Catalog].
 . Click the *Catalog Items* accordion.
@@ -23,7 +23,7 @@ The last step in creating a service is to create a catalog item to represent tha
 
 [NOTE]
 ====
-In {product-title_short}, service catalog items can be more complex than a single virtual machine and are provisioned through a series of automation workflows. The service dialog you created will be used to gather information from the customer, hiding all the complexity of the details needed to actually deploy any of the components.
+In {product-title_short}, service catalog items can be more complex than a single virtual machine and are provisioned through a series of automation workflows. The service dialog you created will be used to gather information from the user requesting the virtual machine, hiding all the complexity of the details needed to actually deploy any of the components.
 ====
 
 You can now provision a virtual machine through Red Hat Virtualization using the Self Service user interface.
