--- a/art-Creating_a_Service_for_VM_Provisioning/topics/Overview.adoc
+++ b/art-Creating_a_Service_for_VM_Provisioning/topics/Overview.adoc
@@ -1,7 +1,7 @@
 [[example-creating-a-service-overview]]
 == Overview
 
-{product-title} provides the ability to define services, which can include one or more virtual machines or instances, and can be deployed across hybrid environments. Services can be made available to users through the Self Service user interface that allows users to order predefined IT services without IT operations getting involved.
+{product-title} provides the ability to define services, which can include one or more virtual machines or instances, and can be deployed across hybrid environments. Services can be made available to users through the Self Service user interface, allowing users to order predefined IT services without IT operations getting involved.
 
 The following three items are required to make a service available to users from the {product-title_short} Self Service user interface:
 
