--- a/doc-Installing_on_OpenShift_Container_Platform/topics/appe-saml-authentication-example.adoc
+++ b/doc-Installing_on_OpenShift_Container_Platform/topics/appe-saml-authentication-example.adoc
@@ -1,4 +1,65 @@
+[[configmap-settings]]
+=== External Authentication Configuration Map Settings
+
+See <<appe-saml-authentication-example>> for an example configuration map file.
+
+The configuration map includes the following parameters:
+
+* `auth-type` - The authentication type.
++
+This parameter controls which configuration files `httpd` will load upon startup. The default is `internal`. Supported values are:
++
+.`auth-type` values
+[width="100%",cols="30%,70%",options="header",]
+|====
+| Value    | External-Authentication Configuration 
+| `internal` | Application Based Authentication - Database, LDAP/LDAPS, Amazon. This is the default.
+| `external` | IPA, IPA 2-factor authentication, IPA/AD Trust, LDAP (OpenLDAP, RHDS, Active Directory, etc.)
+| `active-directory` | Active Directory domain realm join
+| `saml` | SAML based authentication (Keycloak, ADFS, etc.)
+|====
++
+* `auth-kerberos-realms` - The Kerberos realms to join.
++
+When configuring external authentication against IPA, Active Directory or LDAP, this parameter defines the Kerberos realm `httpd`  is configured against, such as _example.com_. When specifying multiple Kerberos realms, they must be separated by spaces. The default is `undefined`.
++
+* `auth-configuration.conf` - The external authentication configuration file  which declares the list of files to overlay upon startup if `auth-type` is other than `internal`.
++
+Syntax for the file is as follows:
++
+----
+# for comments
+file = basename1 target_path1 permission1
+file = basename2 target_path2 permission2
+----
++
+For the files to overlay on the `httpd` pod, one `file` directive is needed per file.
++
+* `basename` - The name of the source file in the configuration map.
+* `target_path` - The path of the file on the pod to overwrite, i.e. `/etc/sssd/sssd.conf`
+* `permission` (optional) - By default, files are copied using the pod's default umask, owner and group, so files are created as mode 644 owner root, group root.
++
+`permission` can be specified as follows, reflecting the mode and ownership to set the copied files to:
++
+** mode
+** mode:owner
+** mode:owner:group
++
+For example:
+** 755
+** 640:root
+** 644:root:apache
+
+Binary files can be specified in the configuration map in their base64 encoded format with a basename having a `.base64` extension. Such files are then converted back to binary as they are copied to their target path.
+
+When an `/etc/sssd/sssd.conf` file is included in the configuration map, the `httpd`  pod automatically enables the SSSD service upon startup.
+
+
 [[appe-saml-authentication-example]]
+=== Sample External Authentication Configuration
+
+
+
 
 Excluding the content of the files, a SAML auth-config map data section may look like:
 
